Update Ko-fi link in footer

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
   <footer>
     <div>Enharmonics accepted (A# = Bb). Frets: 1–12 (no open strings).</div>
-    <div><a href="https://ko-fi.com/yourname" target="_blank" rel="noopener" style="color:#9ad;">Ko-fi</a></div>
+    <div><a href="https://ko-fi.com/rainmes" target="_blank" rel="noopener" style="color:#9ad;">Ko-fi</a></div>
   </footer>
 </div>
 
